Weaken Set to Collection in DynamicStore